# WC-Emu

./: .cproject  .gdb_history  .gitignore  .project  CMakeLists.txt  Makefile  README.md  wcEmu
rom/: README.md
src/: bus.cpp  bus.hpp  connect.c  connect.cpp  main.cpp  socket.cpp  socket.hpp  w65c816s.cpp  w65c816s.hpp
src/components/: charPort.cpp  charPort.hpp  component.hpp  ram.cpp  ram.hpp  rom.cpp  rom.hpp
src/connection/: Connection.hpp
